--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -16,7 +16,7 @@
         </div>
         <!-- 2) Listen to the "keydown" event and store the value in a data property (hint: event.target.value gives you the value) -->
         <div>
-            <input type="text" v-on:keydown="storeUserInput">
+            <input type="text" v-on:keydown="storeUserInput($event)">
             <p>{{value}}</p>
         </div>
         <!-- 3) Adjust the example from 2) to only fire if the "key down" is the ENTER key -->
@@ -36,10 +36,10 @@
                 alertMe: () => {
                     alert("Button clicked");
                 },
-                storeUserInput: (event) => {
+                storeUserInput: function($event) {
                     //console.log($event.target.value);
-                    this.value = event.target.value;
-                    console.log(this.value);
+                    this.value = $event.target.value;
+                    //console.log(this.value);
                 }
             }
         })
